Add trip management backend