@@ -1,14 +1,21 @@
 package library.resep1.Model.Collections;
+
+import java.nio.file.Path;
 import library.resep1.Model.Entities.Bus;
 import library.resep1.Model.Enums.BusType;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 import static org.junit.jupiter.api.Assertions.*;
 
 class BusListTest {
+  @TempDir
+  Path tempDir;
 
   @Test
   void addBusShouldStoreBus() {
-    BusList busList = new BusList();
+    BusList busList = new BusList(
+        tempDir.resolve("buses.json").toString()
+    );
 
     Bus bus = new Bus(
         "Bus 01",
@@ -21,11 +28,13 @@ class BusListTest {
 
     assertEquals(1, busList.getAllBuses().size());
     assertEquals("Bus 01",
-        busList.getAllBuses().getFirst().getBusNumber());}
+        busList.getAllBuses().get(0).getBusNumber());}
 
   @Test
   void addBusShouldRejectDuplicateBusNumber() {
-    BusList busList = new BusList();
+    BusList busList = new BusList(
+        tempDir.resolve("buses.json").toString()
+    );
 
     Bus firstBus = new Bus(
         "Bus 01",
